2013-02-23  Kirit Saelensminde  <kirit@felspar.com>
 Implemented better error detail for when a JSON array is accessed out of bounds.

2013-02-23  Kirit Saelensminde  <kirit@felspar.com>
 Refactored `FSL_CHECK_NEQ` so that it only evaluates it's arguments once.

2013-02-22  Kirit Saelensminde  <kirit@felspar.com>
 Moved the file specific functions into their own header. Now include `fost/file` rather than `fost/unicode` if you only need file handling APIs. Also added a `unique_filename` function suitable for generating temporary file names.

2013-02-08  Kirit Saelensminde  <kirit@felspar.com>
 Add a `directory_iterator` typedef which allows us to iterate over wpath based directory names across all supported versions of Boost.

2013-02-05  Kirit Saelensminde  <kirit@felspar.com>
 Initial simple progress meters allow progress from remote threads to be measured in a control thread.

2013-01-13  Kirit Saelensminde  <kirit@felspar.com>
 Implemented the file input operator for the `digester` so it is now possible to hash files on the file system.

2012-11-23  Kirit Saelensminde  <kirit@felspar.com>
 Added Boost Chrono to builds on Windows for Boost 1.47 and later.

2012-11-16  Kirit Saelensminde  <kirit@felspar.com>
 Removed the `workerqueue` as it doesn't do anything useful that a work pool doesn't already do.

2012-08-17  Kirit Saelensminde  <kirit@felspar.com>
 Removed a dead constructor that does nothing in `worker`.
 No longer pass on log messages captured during tests. This stops expected errors from being displayed and confusing the test results.
 Added a basic parser for the RFC1123 formatted dates used in protocols like SMTP and HTTP. Only the format produced by the Fost libraries is currently supported.

2012-08-08  Kirit Saelensminde  <kirit@felspar.com>