@@ -1,3 +1,6 @@
+2013-03-03  Kirit Saelensminde  <kirit@felspar.com>
+ Changed the `what()` implementation of `fostlib::exceptions::exception` to no longer write out more than one line (unless the info member of the exception does so). Also removed the settings for controlling the format of the `what()` string.
+
 2013-02-23  Kirit Saelensminde  <kirit@felspar.com>
  Implemented better error detail for when a JSON array is accessed out of bounds.
 
